--- a/styles.css
+++ b/styles.css
@@ -5,24 +5,20 @@ body {
   background-attachment: fixed;
   background-color: rgba(255, 255, 255, 0.7);
   margin-left: 10%;
+  font-size: 1.1em;
 }
 
 h3 {
   color: #333;
-  font-size: 3.0em;
+  font-size: 2.0em;
   font-style: italic;
 }
 
-p {
-  font-size: 1.2em;
-}
-
 a {
-  font-size: 1.2em;
   text-decoration: none;
 }
 
 a:hover {
-    color: #ffcc00;
-    font-size: 1.3em;
+  color: #ffcc00;
+  text-decoration: none;
 }
