--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,11 @@ body {
   background-attachment: fixed;
   background-color: rgba(255, 255, 255, 0.7);
   margin-left: 10%;
-  font-size: 1.1em;
+  font-size: 1.1rem;
 }
 
 h3 {
   color: #333;
-  font-size: 2.0em;
   font-style: italic;
 }
 
