--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,25 @@
 body {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('image.png');
+  background-image: url('dark_background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-color: rgba(255, 255, 255, 0.7);
   margin-left: 10%;
-  font-size: 1.18rem;
+  font-size: 1.15rem;
+  color: #ebebd3;
 }
 
 h3 {
-  color: #333;
+  color: #fafdf6;
   font-style: italic;
 }
 
 a {
+  font-size: 1.3rem;
+  color: #cbe896;
   text-decoration: none;
 }
 
 a:hover {
-  color: #ffcc00;
+  color: #ddd92a;
   text-decoration: none;
 }
