--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+  font-family: Palatino, Optima, Georgia, Helvetica, Arial, sans-serif !important;
+}
+
 body {
   background-image: url('dark_background.jpg');
   background-size: cover;
@@ -6,7 +10,6 @@ body {
   margin-left: 5%;
   font-size: 1.15rem;
   color: #ebebd3;
-  font-family: Palatino, Optima, Georgia, Helvetica, Arial, sans-serif;
 }
 
 h3 {
